--- a/my/templates/about.html
+++ b/my/templates/about.html
@@ -70,9 +70,9 @@
                     <div class="jumbotron" style="width: 50%; color: white; background-color: inherit; text-align: center; margin-left: auto; margin-right: auto;">
                       <p>
                           Hi, my name is Vasya, I'm python junior developer.<br>
-                          This site is my project for leaning django web framework.<br>
+                          This site is my project for learning django web framework.<br>
 
-                          It allows to create, save your bookmarks and share them.<br>
+                          It allows you to create, save your bookmarks and share them.<br>
 
                       </p>
                           You can find its source code <a href="https://github.com/neigrok/pinitproj">here</a><br>
